[package]
name = "hades-extensions-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "hades_extensions_rust"
path = "rust_src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.2"
ndarray = "0.15.6"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rand = "0.8.5"
rayon = "1.6.1"

[profile.release]
opt-level = 1
